--- a/avd/views/account_invoice.xml
+++ b/avd/views/account_invoice.xml
@@ -6,6 +6,8 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='payment_term_id']" position="after">
                 <field name="type_receiptor" required="1" attrs="{'readonly': [('state', 'not in', ['draft'])]}" />
+                <field name="txt_file" readonly="1" />
+
             </xpath>
             <xpath expr="//field[@name='payment_term_id']" position="attributes">
                 <attribute name="required">1</attribute>
@@ -39,37 +41,42 @@
         </field>
     </record>
 
-    <record id="account_invoice_supplier_inherit_form" model="ir.ui.view">
-        <field name="name">account.invoice.supplier.form.inherit</field>
+    <record id="invoice_form_cancel_inherit" model="ir.ui.view">
+        <field name="name">invoice.form.cancel.inherit</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_supplier_form"/>
+        <field name="inherit_id" ref="account_cancel.invoice_form_cancel_inherit"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='payment_term_id']" position="after">
-                <field name="type_receiptor" required="1" attrs="{'readonly': [('state', 'not in', ['draft'])]}" />
+            <xpath expr="//button[@name='action_invoice_cancel']" position="replace">
+                <button name="action_invoice_cancel" type="object" states="draft,open" string="Cancel Invoice" groups="base.group_no_one"/>
             </xpath>
-            <xpath expr="//field[@name='payment_term_id']" position="attributes">
-                <attribute name="required">1</attribute>
-            </xpath>
+        </field>
+    </record>
 
-            <xpath expr="//button[@name='action_invoice_open']" position="after">
-                <button name="generate_file" type="object" attrs="{'invisible': [('show_button','=',False)]}"  string="Submit to AVD" class="oe_highlight o_invoice_validate" groups="account.group_account_invoice"/>
-            </xpath>
-            <xpath expr="//sheet/notebook" position="before">
-                <group string="Folio Info." attrs="{'invisible': [('folio','=',False)]}">
+    <record id="account.view_account_invoice_refund" model="ir.ui.view">
+        <field name="name">account.invoice.refund.form</field>
+        <field name="model">account.invoice.refund</field>
+        <field name="arch" type="xml">
+            <form string="Credit Note">
+                <group invisible="1">
                     <group>
-                        <field name="folio" readonly="1"/>
-                        <field name="show_button" invisible="1"/>
-                        <field name="clave_numerica" readonly="1"/>
-                    </group>
-                    <group>
-                        <field name="date" readonly="1"/>
+                        <field name="refund_only" invisible="1"/>
+                        <field name="filter_refund" attrs="{'invisible': [('refund_only','=',True)]}" widget="radio" invisible="1"/>
                     </group>
                 </group>
-                <group string="Response" attrs="{'invisible': [('response','=',False)]}">
+                <group>
+                    <group>
+                        <field name="description"/>
+                    </group>
+                    <group>
+                        <field name="date_invoice"/>
+                        <field name="date" groups="base.group_no_one"/>
+                    </group>
                 </group>
-                <field name="response" readonly="1" attrs="{'invisible': [('response','=',False)]}"/>
-            </xpath>
-
+                <footer>
+                    <button string='Add Credit Note' name="invoice_refund" type="object" class="btn-primary"/>
+                    <button string="Cancel" class="btn-default" special="cancel"/>
+                </footer>
+            </form>
         </field>
     </record>
 </data>
