--- a/aduacarga/views/account_invoice.xml
+++ b/aduacarga/views/account_invoice.xml
@@ -1,32 +1,191 @@
-<data>
-    <record id="account_invoice_inherit_form" model="ir.ui.view">
-        <field name="name">account.invoice.form.inherit</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='comment']" position="replace">
-                <field name="comment" readonly="1"/>
+<odoo>
+    <data>
+        <record id="account_invoice_inherit_form" model="ir.ui.view">
+            <field name="name">account.invoice.form.inherit</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//notebook/page[last()]" position="after">
+                    <page string="Gastos">
+                        <field name="note_ids">
+                            <tree editable="bottom">
+                                <field name="descripcion"/>
+                                <field name="cantidad"/>
+                                <field name="precio"/>
+                                <field name="valor"/>
+                                <field name="currency_id" invisible="1"/>
+                            </tree>
+                        </field>
+                    </page>
+                </xpath>
+            </field>
+        </record>
+
+        <report
+                id="account_invoices_expense"
+                model="account.invoice"
+                string="Expense"
+                report_type="qweb-pdf"
+                name="aduacarga.report_invoice"
+                file="aduacarga.report_invoice"
+                attachment="'EXP for INV '+(object.number or '').replace('/','')+'.pdf'"
+        />
+
+        <template id="aduacarga.report_invoice">
+            <t t-call="web.basic_layout">
+
+                <t t-foreach="docs" t-as="o">
+                    <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})" />
+                    <t t-set="style" t-value="o.style or res_company.default_style or user.env.ref('professional_templates.default_style_for_all_reports')"/>
+
+                    <t t-call="aduacarga.report_expense_document" t-lang="o.partner_id.lang"/>
+                </t>
+            </t>
+        </template>
+
+        <template id="report_expense_document" inherit_id="professional_templates.INVOICE_9_document" primary="True" name="Expense">
+            <xpath expr="//div[@class='header col-xs-12']" position="replace">
+                <t t-if="o and 'company_id' in o">
+                    <t t-set="company" t-value="o.company_id"></t>
+                </t>
+                <t t-if="not o or not 'company_id' in o">
+                    <t t-set="company" t-value="res_company"></t>
+                </t>
+                <div class="header col-xs-12" t-attf-style="padding-bottom:0px; padding-left:0px; padding-right:0px; color:{{style.text_color}} !important;font-size:{{style.header_font}}px !important;font-family:{{style.font_family}} !important;">
+                    <t t-if="style.header">
+                        <div class="col-xs-12 mb8">
+                            <div t-attf-class="mt32 #{'col-xs-3' if o.number else 'col-xs-6'}" t-attf-style="padding-left:0px;color:{{style.theme_color}};">
+                                <h3>
+                                    <span t-if="o.type == 'out_invoice' and (o.state == 'open' or o.state == 'paid')" style="white-space:nowrap;">EXPENSE</span>
+
+                                </h3>
+                                <t  t-if="o.type == 'out_refund'">
+                                    <div class="text-left">
+                                        <strong style="white-space:nowrap;">Folio: </strong>
+                                        <span t-field="o.folio"/>
+                                    </div>
+                                    <div class="text-left">
+                                        <strong style="white-space:nowrap;">Clave Numerica: </strong>
+                                        <span t-field="o.clave_numerica"/>
+                                    </div>
+                                </t>
+                            </div>
+                            <div t-if="o.number" class="col-xs-5 mt32 text-center" style="padding-left:0px;">
+                                <h2 t-attf-style="background-color:{{style.theme_color}}; color:{{style.theme_txt_color}};display: inline-block;padding-left:4px;padding-right:4px;" t-field="o.number"/>
+                                <t  t-if="o.type == 'out_invoice'">
+                                    <div class="text-left">
+                                        <strong style="white-space:nowrap;">Folio: </strong>
+                                        <span t-field="o.folio"/>
+                                    </div>
+                                    <div class="text-left">
+                                        <strong style="white-space:nowrap;">Clave Numerica: </strong>
+                                        <span t-field="o.clave_numerica"/>
+                                    </div>
+                                </t>
+                                <div t-if="o.date_invoice" class="text-left">
+                                    <strong style="white-space:nowrap;">Invoice Date: </strong>
+                                    <span t-field="o.date_invoice"/>
+                                </div>
+                                <div t-if="o.date_due" class="text-left">
+                                    <strong style="white-space:nowrap;">Due Date: </strong>
+                                    <span t-field="o.date_due"/>
+                                </div>
+                                <div t-if="o.origin" class="text-left">
+                                    <strong style="white-space:nowrap;">Source Document: </strong>
+                                    <span t-field="o.origin"/>
+                                </div>
+                                <div t-if="o.fiscal_position_id" class="text-left">
+                                    <strong style="white-space:nowrap;">Fiscal Position: </strong>
+                                    <span t-field="o.fiscal_position_id"/>
+                                </div>
+                                <div t-if="o.name" class="text-left">
+                                    <strong style="white-space:nowrap;">Reference: </strong>
+                                    <span t-field="o.name"/>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </div>
             </xpath>
-            <xpath expr="//notebook/page[last()]" position="after">
-                <page string="Notes">
-                    <group>
-                        <group>
-                            <field name="misc_28" />
-                            <field name="misc_34" />
-                            <field name="misc_36" />
-                            <field name="misc_38" />
-                            <field name="misc_40" />
-                        </group>
-                        <group>
-                            <field name="misc_30" />
-                            <field name="misc_35" />
-                            <field name="misc_37" />
-                            <field name="misc_39" />
-                            <field name="misc_41" />
-                        </group>
-                    </group>
-                </page>
+
+            <xpath expr="//div[@class='article page']" position="replace">
+                <div class="page" t-attf-style="color:{{style.text_color}} !important;font-size:{{style.body_font}}px !important;font-family:{{style.font_family}} !important;">
+                    <h4 class="text-center" t-attf-style=" color:#fff;" t-field="o.number">Draft</h4>
+                    <div class="col-xs-12" t-attf-style="white-space:pre-line;color:#{style.wm_color};left:#{style.leftpadding}mm; top:#{style.toppadding}mm;font-size:#{style.fontsize}px; opacity:#{style.opacity};z-index:-99; -webkit-transform:rotate(-#{style.rotate}deg);position:fixed;"><t t-esc="style.wm_eval(o, time, user, res_company)"/></div>
+                    <t t-set="div_class" t-value="'col-xs-3' if o.partner_shipping_id and o.partner_shipping_id != o.partner_id else 'col-xs-4'"/>
+                    <div t-attf-class="#{div_class}">
+                        <!--<span t-attf-style="font-size:{{style.body_font+6}}px; font-weight:bold;color:#fff;">-->
+                        <!--From:</span>-->
+                        <t t-call="professional_templates.company_address"/>
+                    </div>
+                    <div t-attf-class="#{div_class}">
+
+                    </div>
+                    <div t-attf-class="#{div_class}">
+                        <!--<span t-if="o.partner_shipping_id and o.partner_shipping_id != o.partner_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">-->
+                        <!--Bill To:</span>-->
+                        <!--<span t-if="o.partner_shipping_id == o.partner_id or not o.partner_shipping_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">-->
+                        <!--Bill &amp; Ship To:-->
+                        <!--</span>-->
+                        <div t-if="o.partner_id" t-attf-style="color:{{style.cust_color}};font-size:{{style.body_font+6}}px;font-weight:500;">
+                            <t t-if="o.partner_id.parent_id">
+                                <span t-field="o.partner_id.parent_id"/>, <span t-if="o.partner_id.title" t-field="o.partner_id.title"/> <span t-field="o.partner_id.name"/>
+                            </t>
+                            <t t-if="not o.partner_id.parent_id">
+                                <span t-if="o.partner_id.title" t-field="o.partner_id.title"/> <span t-field="o.partner_id"/>
+                            </t>
+                        </div>
+                        <address t-field="o.partner_id" style="margin-bottom:0px;" t-field-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;:[&quot;address&quot;,&quot;phone&quot;,&quot;email&quot;,&quot;website&quot;],&quot;no_marker&quot;: false}"/>
+                        <span t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></span>
+                    </div>
+
+                    <div t-attf-class="#{div_class}" t-if="o.partner_shipping_id and o.partner_shipping_id != o.partner_id">
+                        <!--<span t-attf-style="font-size:{{style.body_font+6}}px;font-weight:bold;color:#fff;">Ship To:</span>-->
+                        <address t-field="o.partner_shipping_id" style="margin-bottom:0px;" t-field-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;:[&quot;name&quot;, &quot;address&quot;,&quot;phone&quot;,&quot;email&quot;,&quot;website&quot;],&quot;no_marker&quot;: false}"/>
+                        <span t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></span>
+                    </div>
+
+                    <div class="col-xs-12" style="padding:8px;"/>
+
+                    <table class="table  table-condensed" t-attf-style="color:{{style.text_color}};" >
+                        <thead t-attf-style="color:{{style.theme_txt_color if not style.transparent else style.text_color}};">
+                            <t t-set="th_style" t-value="'border-bottom: 1px solid #ddd !important;white-space:nowrap;'"></t>
+                            <tr t-attf-style="background-color:{{style.theme_color if not style.transparent else 'transparent'}};font-size:{{style.body_font+2}}px;">
+                                <th t-attf-style="{{th_style}}"><i class="fa fa-list-ol"/> Código</th>
+                                <th t-attf-style="{{th_style}}"><i class="fa fa-th-large"/> Descripción</th>
+                                <th class="text-center" t-attf-style="{{th_style}}"><i class="fa fa-sort-amount-asc"/> Cantidad</th>
+                                <th class="text-center" t-attf-style="{{th_style}}"><i class="fa fa-tags"/> Precio</th>
+                                <th class="text-center" t-attf-style="{{th_style}}"><i class="fa fa-tags"/> Valor</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            <t t-foreach="o.note_ids" t-as="l">
+                                <tr t-attf-style="background-color:{{style.odd if (l_parity in 'odd' and not style.transparent) else (not style.transparent and style.even)  or 'transparent'}};page-break-inside: avoid">
+                                    <td><span t-esc="l_index + 1"/></td>
+                                    <td><span t-field="l.descripcion"/></td>
+                                    <td class="text-right"><span  t-field="l.cantidad"/></td>
+                                    <td class="text-right"><span  t-field="l.precio"/></td>
+                                    <td class="text-right"><span  t-field="l.valor"/></td>
+                                </tr>
+                            </t>
+
+                        </tbody>
+                    </table>
+
+
+                </div><!--End of PAGE-->
             </xpath>
-        </field>
-    </record>
-</data>
+
+            <xpath expr="//div[@class='footer']" position="replace">
+                <div class="footer" t-attf-style="font-size:{{style.footer_font}}px !important;font-family:{{style.font_family}} !important;">
+                    <t t-call="professional_templates.company_footer"/>
+                </div>
+            </xpath>
+
+        </template>
+
+
+    </data>
+
+</odoo>
