--- a/aduacarga/views/account_invoice.xml
+++ b/aduacarga/views/account_invoice.xml
@@ -103,6 +103,22 @@
                                     <span t-field="o.name"/>
                                 </div>
                             </div>
+                            <div class="col-xs-4 pull-right" style="padding-right:0px;">
+                                <span t-if="style.logo">
+                                    <span itemprop="image" t-field="style.logo" t-field-options='{"widget": "image", "style": "float:right;"}'/>
+                                </span>
+                                <span t-if="not style.logo and company.logo">
+                                    <span itemprop="image" t-field="company.logo" t-field-options='{"widget": "image", "style": "float:right;"}'/>
+                                </span>
+                                <span t-if="not style.logo and not company.logo">
+                                    <span itemprop="image" t-field="company.logo" t-field-options='{"widget": "image", "style": "float:right;"}'/>
+                                </span>
+                                <div t-if="company.twitter or company.facebook or company.facebook" t-attf-style="background-color:{{style.theme_color}}; width:auto; float:right; padding-left:15px; color:{{style.theme_txt_color}}; padding-right:15px; padding-top:4px; padding-bottom:2px;" class="pull-right mb8">
+                                    <span t-if="company.twitter" style="padding-left:0px;" class="fa fa-twitter-square "/>&#160;<span t-field="company.twitter"/>
+                                    <span t-if="company.facebook" style="padding-left:13px;" class="fa fa-facebook-square "/>&#160;<span t-field="company.facebook"/>
+                                    <span t-if="company.googleplus" style="padding-left:13px;" class="fa fa-google-plus-square "/>&#160;<span t-field="company.googleplus" />
+                                </div>
+                            </div>
                         </div>
                     </t>
                 </div>
@@ -114,19 +130,19 @@
                     <div class="col-xs-12" t-attf-style="white-space:pre-line;color:#{style.wm_color};left:#{style.leftpadding}mm; top:#{style.toppadding}mm;font-size:#{style.fontsize}px; opacity:#{style.opacity};z-index:-99; -webkit-transform:rotate(-#{style.rotate}deg);position:fixed;"><t t-esc="style.wm_eval(o, time, user, res_company)"/></div>
                     <t t-set="div_class" t-value="'col-xs-3' if o.partner_shipping_id and o.partner_shipping_id != o.partner_id else 'col-xs-4'"/>
                     <div t-attf-class="#{div_class}">
-                        <!--<span t-attf-style="font-size:{{style.body_font+6}}px; font-weight:bold;color:#fff;">-->
-                        <!--From:</span>-->
+                        <span t-attf-style="font-size:{{style.body_font+6}}px; font-weight:bold;color:#fff;">
+                        From:</span>
                         <t t-call="professional_templates.company_address"/>
                     </div>
                     <div t-attf-class="#{div_class}">
 
                     </div>
                     <div t-attf-class="#{div_class}">
-                        <!--<span t-if="o.partner_shipping_id and o.partner_shipping_id != o.partner_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">-->
-                        <!--Bill To:</span>-->
-                        <!--<span t-if="o.partner_shipping_id == o.partner_id or not o.partner_shipping_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">-->
-                        <!--Bill &amp; Ship To:-->
-                        <!--</span>-->
+                        <span t-if="o.partner_shipping_id and o.partner_shipping_id != o.partner_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">
+                        Bill To:</span>
+                        <span t-if="o.partner_shipping_id == o.partner_id or not o.partner_shipping_id" t-attf-style="color:#fff;font-size:{{style.body_font+6}}px; font-weight:bold;">
+                        Bill &amp; Ship To:
+                        </span>
                         <div t-if="o.partner_id" t-attf-style="color:{{style.cust_color}};font-size:{{style.body_font+6}}px;font-weight:500;">
                             <t t-if="o.partner_id.parent_id">
                                 <span t-field="o.partner_id.parent_id"/>, <span t-if="o.partner_id.title" t-field="o.partner_id.title"/> <span t-field="o.partner_id.name"/>
